--- a/html practice.html
+++ b/html practice.html
@@ -5,13 +5,438 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
+<body bgcolor="tan">
 
     <h1 align="center"><u><font color="red" size="10" face="impact,arial,verdana">Hello &nbsp; World</font></u></h1>
+    <hr width="50%"/>
     12<sup>th</sup>
     <br>
     H<sub>2</sub>O
+     <hr width="100%" />
     <p align="justify"><i><u>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</u></i> <s>Praesent sit amet mi tempus quam semper rutrum non sit amet urna.</s> Donec commodo nunc nec enim posuere, at eleifend neque tincidunt. Aliquam nec scelerisque leo. Morbi elit elit, scelerisque vel enim nec, dapibus hendrerit purus. Morbi quis nunc eleifend sapien pellentesque lacinia a vitae lacus. Etiam placerat odio vestibulum efficitur ullamcorper. Nulla sit amet tortor ut mi pellentesque commodo quis aliquam neque. Praesent pellentesque, felis non sollicitudin lacinia, tellus lectus tempor leo, in cursus nulla lorem congue leo.</p>
+    <hr width="50%" align="left" size="6" color="black"/>
     <p align="justify"> <b><font color="black">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</font></b> Praesent sit amet mi tempus quam semper rutrum non sit amet urna. Donec commodo nunc nec enim posuere, at eleifend neque tincidunt. Aliquam nec scelerisque leo. Morbi elit elit, scelerisque vel enim nec, dapibus hendrerit purus. Morbi quis nunc eleifend sapien pellentesque lacinia a vitae lacus. Etiam placerat odio vestibulum efficitur ullamcorper. Nulla sit amet tortor ut mi pellentesque commodo quis aliquam neque. Praesent pellentesque, felis non sollicitudin lacinia, tellus lectus tempor leo, in cursus nulla lorem congue leo.</p>
+
+    <h2><font color="red" size="5" face="impact,arial,verdana"><u>Unordered List<u></font></h2>
+     <ul type="circle">
+        <li>Shahzaib Shafique</li>
+        <li>Basit Ali</li>
+        <li>Aman Khan</li>
+        <li>Wasif Raza</li>
+     </ul>
+
+<h2><font color="red" size="5" face="impact,arial,verdana"><u>Ordered List</u></font></h2>
+
+<ol type="A" start="1">
+    <li>Shahzaib Ahmad</li>
+    <li>Arsh Zubar</li>
+    <li>Ahsan Abdullah</li>
+    <li>Ali Hamza</li>
+</ol>
+
+<ol type="I">
+    <li>Shahzaib Ahmad</li>
+    <li>Arsh Zubar</li>
+    <li>Ahsan Abdullah</li>
+    <li>Ali Hamza</li>
+</ol>
+
+<h2><font color="red" size="5" face="impact,arial,verdana"><u>Description List</u></font></h2>
+
+<dl>
+    <dt>Intro</dt>
+    <dd>Im shahzaib shafique</dd>
+
+    <dt>skills</dt>
+    <dd>I have cpp skill</dd>
+</dl>
+
+<h2><font color="red" size="5" face="impact,arial,verdana"><u>Marquee Tag</u></font></h2>
+
+<marquee behavior="scroll" scrollamount="10" direction="right" scrolldelay="10" loop="2" bgcolor="pink" width="20%">Hello World!</marquee>
+<marquee behavior="slide">Hello World!</marquee>
+<marquee behavior="alternate">Hello World!</marquee>
+
+<h2><font color="red" size="5" face="impact,arial,verdana"><u>Pre Formatted Tag</u></font></h2>
+
+<pre>
+     <font color="red" size="3" face="impact,arial,verdana">HELLO      WORLD</font>
+</pre>
+ 
+
+<h2><font color="red" size="5" face="impact,arial,verdana"><u>Image Tag</u></font></h2>
+
+<img src="babar.webp" width="300px" alt="babar azam" title="Hello Babar Azam" />
+
+
+
+<h2><font color="red" size="5" face="impact,arial,verdana"><u>Anchor Tag (most imp to link webpages of websites)</u></font></h2>
+
+<a href="index.html">Go To another Page</a>
+<br>
+<a href="#linkone">Go To Link One</a>
+<br>
+<a href="#linksecond">Go To Link Second</a>
+<h2><a name="TopLink">subheading Top</a></h2>
+<p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+<p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+<p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+<p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+<p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+<h2><a name="linkone">sub heading one</a></h2>
+<p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+<p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+<p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+<h2><a name="linksecond">sub heading two</a></h2>
+<p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+<p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+<p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+<br>
+<a href="#TopLink">Go to Top</a>
+<br>
+
+<a href="mailto:shahzaibshafique734@gmail.com?">
+  Contact Us
+</a>
+
+
+<h2><font color="red" size="5" face="impact,arial,verdana"><u>Table Tag</u></font></h2>
+
+<table border="10" width="100%" cellpadding="20px"  cellspacing="10px" bgcolor="tan" align="center">
+    <caption>Teacher Record</caption>
+    <tr bgcolor="pink">
+        <td  valign="top">A Lorem ipsum dolor sit amet, consectetur adipiscing elit.</td>
+        <td valign="top">B Praesent ultricies dolor scelerisque neque congue, non vulputate ex bibendum.</td>
+    </tr>
+
+    <tr bgcolor="Yellow">
+        <td valign="top">C Morbi faucibus quam eget orci varius, sit amet rhoncus velit efficitur.</td>
+        <td valign="top">D Nam eu mi sed ante gravida venenatis eget non augue.</td>
+    </tr>
+
+     <tr bgcolor="Yellow">
+        <td valign="top">E Morbi faucibus quam eget orci varius, sit amet rhoncus velit efficitur.</td>
+        <td valign="top">F Nam eu mi sed ante gravida venenatis eget non augue.</td>
+    </tr>
+</table>
+
+
+   <table border="10" width="100%" cellpadding="20px"  cellspacing="10px" bgcolor="tan" align="center">
+    <caption>Student Record</caption>
+    <tr bgcolor="pink">
+        <td  valign="top">A.</td>
+        <td valign="top">B.</td>
+    </tr>
+
+    <tr bgcolor="Yellow">
+        <td valign="top" colspan="2" >C Morbi faucibus quam eget orci varius, sit amet rhoncus velit efficitur.</td>
+
+    </tr>
+
+     <tr bgcolor="Yellow">
+        <td valign="top">D.</td>
+        <td valign="top">E.</td>
+    </tr>
+</table>
+
+<br>
+<br>
+
+<table border="1" cellspacing="0" cellpadding="10" bgcolor="white"  width="90%" align="center">
+  <tr bgcolor="orange">
+         <td colspan="2">
+            <h1>Site Name</h1>
+         </td>
+  </tr>
+
+    <tr>
+         <td colspan="2" bgcolor="pink"> 
+            <a href="">Home</a> | <a href="">About Us</a> | <a href="">Gallery</a> | <a href="">FAQ</a> | <a href="">Contact Us</a> |  
+         </td>
+  </tr>
+
+    <tr>
+         <td width="75%">
+            <h2> Sub Heading</h2>
+            <p>Praesent rutrum tellus turpis, vel porttitor erat semper ac. Donec nec massa viverra, vulputate leo ac, volutpat tellus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Suspendisse potenti. Nullam sit amet ornare dui. Donec mattis elit nec ex lobortis, vitae tempus quam efficitur. Phasellus quis justo auctor, tincidunt erat ac, malesuada lorem. Fusce molestie ante congue, semper risus quis, volutpat dui. Ut lectus dolor, aliquet ac posuere eu, placerat id ante.</p>
+            <p>Praesent a commodo ante. Nulla lobortis quis nibh ut interdum. Fusce pharetra ac magna eu blandit. Etiam metus lorem, bibendum nec mollis quis, tincidunt ac magna. Nam congue nibh ut maximus iaculis. Nam in elementum purus, et interdum ligula. Curabitur tristique lacus sit amet egestas scelerisque. Morbi ut auctor nibh. Morbi hendrerit purus vitae nibh ullamcorper fringilla.</p>
+         </td>
+         <td valign="top">
+          <ul>
+            <li><a href="">Home</a></li>
+            <li><a href="">About Us</a></li>
+            <li><a href="">Gallery</a></li>
+            <li><a href="">Contact Us</a></li>
+          </ul>
+         </td>
+  </tr>
+
+  <tr bgcolor="orange">
+    <td colspan="2">
+           @copyright sitename 2018.
+    </td>
+  </tr>
+
+</table>
+
+<br>
+<br>
+
+<table border="1" cellspacing="0" cellpadding="10" align="center" width="90%">
+    <tr>
+        <th>Name</th>
+        <th>class</th>
+        <th>percentage</th>
+    </tr>
+    <tr>
+        <td>shahzaib</td>
+        <td>10<sup>th</sup></td>
+        <td>94%</td>
+    </tr>
+
+     <tr>
+        <td>Hamza</td>
+        <td>10<sup>th</sup></td>
+        <td>84%</td>
+    </tr>
+</table>
+
+
+<br>
+<br>
+
+<table border="1" cellspacing="0" cellpadding="10" align="center" width="50%">
+
+    <thead>
+     <tr>
+        <th width="50%">Subject</th>
+        <th>Marks</th>
+    </tr>
+    </thead>
+
+     <tbody bgcolor="orange">
+    <tr>
+        <td width="50%">DSA</td>
+        <td>80</td>
+    </tr>
+
+     <tr>
+        <td width="50%">DB</td>
+        <td>85</td>
+    </tr>
+
+     <tr>
+        <td width="50%">HCI</td>
+        <td>70</td>
+    </tr>
+    </tbody>
+
+    <tfoot>
+     <tr>
+        <td width="50%"><b>Total Marks</b></td>
+        <td>235</td>
+    </tr>
+    </tfoot>
+
+</table>
+
+
+<h2><font color="black" size="5" face="impact,arial,verdana"><u>IFrame Tag</u></font></h2>
+
+<iframe src="babar.webp" frameborder="0" align="center"  width="80%"></iframe>
+
+
+<h2><font color="black" size="5" face="impact,arial,verdana"><u>Audio Tag</u></font></h2>
+
+<audio controls>
+<source src="audio.mp3" />
+</audio>
+
+<br>
+
+<h2><font color="black" size="5" face="impact,arial,verdana"><u>Video Tag</u></font></h2>
+
+<video controls >
+    <source src="video.mp4" />
+</video>
+
+<br>
+
+<h2><font color="black" size="5" face="impact,arial,verdana"><u>form Tag</u></font></h2>
+
+<form action="" method="">
+    <fieldset color="black">
+        <legend color="black">Enter Ur Details</legend>
+    <label>Name:</label>
+    <input type="text" id="name" placeholder="Enter Ur Name">
+<br>
+<br>
+    <label>Password:</label>
+    <input type="password" id="name" placeholder="Enter Ur Password">
+<br>
+<br>
+<label>Gender</label>
+<input type="radio" name="Gender" id="Male"><label>Male</label>
+<input type="radio" name="Gender" id="Female"><label>Female</label>
+
+<br>
+<br>
+<label>Description:</label><Textarea></Textarea>
+
+<br>
+<br>
+<label>Hobbies</label>
+<input type="checkbox" name="Hobbies" id="Music"><label>Music</label>
+<input type="checkbox" name="Hobbies" id="Sports"><label>Sports</label>
+<input type="checkbox" name="Hobbies" id="Music"><label>Movies</label>
+
+<br>
+<br>
+<label>Submit</label>
+<input type="submit">
+
+<br>
+<br>
+<label>Country</label>
+<select size="2" multiple>
+    <option selected>Pakistan</option>
+    <option>India</option>
+    <option>China</option>
+    <option>US</option>
+</select>
+<br>
+<br>
+<label>Cars</label>
+<select>
+<optgroup label="Toyota">
+    <option>Corrolla</option>
+    <option>Fortuner</option>
+    <option>Revo</option>
+</optgroup>
+
+<optgroup label="Honda">
+    <option>City</option>
+    <option>Acty</option>
+    <option>Revo</option>
+</optgroup>
+</select>
+
+<br>
+<br>
+
+<label>Cars</label>
+<input list="Cars">
+<datalist id="Cars">
+    <option>Corrolla</option>
+    <option>Fortuner</option>
+    <option>Revo</option>
+    <option>City</option>
+    <option>Acty</option>
+</datalist>
+
+<br>
+<br>
+
+<label>Upload File:</label>
+<input type="file" name "">
+
+<br>
+<br>
+<input type="submit" value="save">
+
+<input type="reset">
+
+<br>
+<br>
+
+<label>Select Color</label>
+<input type="color" name="">
+
+
+<br>
+<br>
+
+<label>Number</label>
+<input type="number" min="0" max="100" step="10" name="">
+
+
+<br>
+<br>
+
+<label>Range</label>
+<input type="range" min="1" max="100" name="">
+
+<br>
+<br>
+
+<label>Date</label>
+<input type="date" name="">
+
+<br>
+<br>
+
+<label>DateTime</label>
+<input type="datetime-local" name="">
+
+<br>
+<br>
+
+<label>Month</label>
+<input type="month" name="">
+
+<br>
+<br>
+
+<label>Week</label>
+<input type="week" name="">
+
+
+<br>
+<br>
+
+<label>Time</label>
+<input type="time" name="">
+
+
+<br>
+<br>
+
+<label>Email</label>
+<input type="email" name="">
+
+
+<br>
+<br>
+
+<label>Url</label>
+<input type="url" name="">
+
+
+<br>
+<br>
+
+<label>Search</label>
+<input type="search" name="">
+
+
+<br>
+<br>
+
+<label>Phone no.</label>
+<input type="tel" name="">
+
+<br>
+<br>
+<input type="submit" id="">
+<input type="reset" id="">
+
+
+
+
+
+
+</fieldset>
+</form>
+
 </body>
 </html>
