--- a/index.html
+++ b/index.html
@@ -1,1 +1,4 @@
 <p>This is my practice project</p>
+<a href="html practice.html">Return to Previous Page</a>
+<br>
+<a href="html practice.html" target="_parent">Return to Previous Page</a>
