--- a/signup.html
+++ b/signup.html
@@ -7,7 +7,7 @@
 </head>
 <body style="background-color:darkgray">
     <center>
-    <img src="githubpic.png" width="15%" alt="GitHub Logo" title="github"/>
+    <img src="image.png" width="15%" alt="GitHub Logo" title="github"/>
 
     <p><font color="black" size="6" face="Arial">Sign in to GitHub</font></p>
 
@@ -15,7 +15,7 @@
 
       <br>
 
-      <fieldset style="width:300px; height:150px; background-color: white;">
+      <fieldset style="width:300px; height:150px; background-color:white;">
 
         <font color="black" size="4" face="Arial">
             <label>Username/Email:</label>
