--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@ border:5px solid black;
     {
      width:250px;
       height:250px;
+      outline:50px green  ;
      border:3px solid black;
      border-radius: 20px 1px;
      margin:20px 10px 30px 50px;
