--- a/portfoliopr.html
+++ b/portfoliopr.html
@@ -4,47 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<style>
-    body{
-        font-family: arial,impact,verdana;
-    background-color:lightgrey;
-    margin:0;
-    padding: 0;
-    }
-#wrapper{
-    border:2px solid black;
-    width:1000px;
-    background:lightgrey;
-    margin:0 auto;
-}
-#header{
-    background-color:blue ;
-}
-
-#menu{
-    background-color: white;
-}
-#menu li{
-    display: inline-block;
-    color: black;
-}
- #menu li a{
-    display:block;
-    padding:10px 13px;
-    color:black;
-    text-decoration: none;
-  }
-
-  #menu li a:hover{
-    background:black;
-    color:aliceblue;
-  }
-</style>
 <body>
-    <div id="wrapper">
+    <div id="container">
         <div id="header">
-            <h1>Shahzaib Shafique</h1>
+            <h1>
+Shahzaib Shafique</h1>
         </div>
         <div id="menu">
             <ul>
