--- a/portfoliopr.html
+++ b/portfoliopr.html
@@ -20,34 +20,32 @@ Shahzaib Shafique</h1>
             <li><a href="">Contact</a></li>
             </ul>
         </div>
-        <div id="hero">
-            <pre>
-<h1>    Welcome to
-    My Portfolio
-</h1>
-            </pre>
+        <div id="hero">          
+   <h1> Welcome to<br> My Portfolio</h1>
         </div>
         <div id="content">
-          <h2>About Me</h2>
-          <p>Hi, I’m Shahzaib, a passionate Computer Science student with a strong interest in web development and programming. I enjoy building clean, simple, and user-friendly digital solutions while constantly learning new technologies to improve my skills. My journey started with C++ and problem-solving, and I’m now expanding into web technologies like HTML, CSS, and JavaScript to create interactive projects. I believe in continuous growth, creativity, and hard work to achieve my goals, and I<sup>’</sup>m excited to showcase my work as I progress further in my career.</p>
-          <h2>Projects</h2>
+          <h2 id="about">About Me</h2>
+          <p>Hi, I’m Shahzaib, a passionate Computer Science student with a strong interest in web development and programming. I enjoy building clean, simple, and user-friendly digital solutions while constantly learning new technologies to improve my skills. My journey started with <span> C++</span> and problem-solving, and I’m now expanding into web technologies like <span>HTML</span>, <span>CSS</span>, and <span>JavaScript</span> to create interactive projects. I believe in continuous growth, creativity, and hard work to achieve my goals, and I<sup>’</sup>m excited to showcase my work as I progress further in my career.</p>
+          <h2 id="projects">Projects</h2>
           <ol>
-            <li>Simple Web Pages Using(html,css)</li>
+            <li>Simple Web Pages Using(HTML,CSS)</li>
             <li>Library Management System Using(C++ DSA)</li>
-            <li>Quiz Game console based Using(C++ DSA)</li>
+            <li>Quiz Game console based Using(C++ OOP)</li>
           </ol>
         </div>
         <div id="sidebar">
              <h2>Quick Links</h2>
              <ul>
-            <li><a href="">Home</a></li>
-            <li><a href="">About</a></li>
-            <li><a href="">Projects</a></li>
-            <li><a href="">Contact</a></li>
+            <li><a href="#">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#contacts">Contact</a></li>
             </ul>
         </div>
         <div id="footer">
-            @Shahzaib Shafique
+              <a id="contact" href="https://github.com/shahzaib-shafique" target="_blank" rel="noopener noreferrer">
+github.com/shahzaib-shafique
+              </a>
         </div>
     </div>
 </body>
