--- a/page4.html
+++ b/page4.html
@@ -1,60 +1,179 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>webPage4</title>
-</head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+<title>webpage4</title>
 <style>
-body{
-    margin:0;
-    padding:0;
-    font-family: Arial, Helvetica, sans-serif;
+     * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
 
-    display:grid;           
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background: #f0f0f0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+            padding: 20px;
+        }
+    #container {
+        width: 1200px;
+        height: 465px;
+        position: relative;
+        background: #e8e8e8;
+        overflow: hidden;
+        display: flex; 
+    }
+
+    #left {
+        flex: 1.45; 
+        background: #e8e8e8;
+        padding:10px 0px 0px 100px;
+        position: relative;
+        z-index: 2;
+        display: flex;
+    flex-direction: column;    
+  /*  justify-content: center;    vertical center */
+    align-items: center;        /* horizontal center */
+    padding: 20px;
+    }
+    #topbox{
+        width: 500px;
+         height:33px;
+         margin:20px 0px 0px 0px;
+        position: relative;
+        background: rgb(55, 55, 245);
+        overflow: hidden;  
+        display: flex;            
+    justify-content: space-between; 
+    align-items: center;      
+    padding: 0px  10px;
+    border:1.5px solid black;
+      color:white;
 
 }
 
-#container{
-    width:800px;
-    height: 450px;
-     text-align: center;
-    position: relative; 
+#box1,#box2,#box3,#box4,#box5{
+     width: 500px;
+     height:33px;
+    border:1.5px solid black;
+    background:white;
+    color:black;
+    display: flex;            
+    justify-content: space-between; 
+    align-items: center;      
+    padding: 0px  10px;
+    margin-top: 15px;
 }
 
-#left{
-    width:500px;
-    height:450px;
-    background-color: rgb(245, 244, 244);
-     float:left;
-
-}
-
-#right{
-    width:300px;
-    height:450px;
-    background-color: rgb(98, 98, 235);
-    float:right;
-    clip-path: polygon(75% 0%, 100% 50%, 75% 100%, 0% 100%, 25% 50%, 0% 0%);
-   
-
+#box1,#box2,#box3,#box4,#box5 i{
+    color:black;
+    font-size: 9px;
 }
 
 
+#topbox i{
+    color:white;
+    font-size: 9px;
+}
 
+#botbox{
+    width: 500px;
+    height:90px;
+    border:1.5px solid black;
+    background-color: white;
+}
+
+
+   #left p{
+      font-size: small;
+      font-weight:800;
+     line-height: 1;
+      margin:10px 0px 0px 10px;
+      font-weight: 400;
+    }
+    #left span{
+      font-size:small;
+      font-weight:640;
+    }
+
+    #right {
+        flex: 1; 
+        background:rgb(80, 70, 233);
+        display: flex;
+        clip-path: ellipse(100% 100% at 100% 50%);
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        color: white;
+        position: relative;
+        z-index: 1;
+    }
+    h3{
+        font-weight:500;
+        font-size:14px;
+    }
+    #right h1{
+        font-size: 45px;
+        font-weight:500;
+    }
+    #right p{
+        color: black;
+        font-weight:500;
+    }
+    
 </style>
+</head>
 <body>
     <div id="container">
         <div id="left">
+            <h3>Frequently Asked Questions</h3>
+            <div id="topbox">
+        <span>Web Designing</span>
+ <i class="fa-solid fa-chevron-up arrow"></i>
+            </div>
+            <div id="botbox">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eu sodales felis  eu </p>
+        <p>Donec ultricies dui cursus quam maximus eu sodales felis consectetur adipt</p>
+        <p> sit amet, consectetur adipiscing elit ipsum consectetur!</p>
+            </div>
+
+            <div id="box1">
+<span>Web Designing</span>
+ <i class="fa-solid fa-chevron-down arrow"></i>
+            </div>
+
+             <div id="box2">
+                <span>Web Development</span>
+ <i class="fa-solid fa-chevron-down arrow"></i>
+            </div>
+
+             <div id="box3">
+                <span>App Development</span>
+ <i class="fa-solid fa-chevron-down arrow"></i>
+            </div>
+
+             <div id="box4">
+                <span>Digital Development</span>
+ <i class="fa-solid fa-chevron-down arrow"></i>
+            </div>
+
+             <div id="box5">
+                <span>Graphics Designing</span>
+ <i class="fa-solid fa-chevron-down arrow"></i>
+            </div>
 
         </div>
-
         <div id="right">
-
-        </div>
+        <h1>Accordion</h1>
+        <p>HTML CSS & JavaScript</p>
+       </div>
+            
     </div>
 </body>
 </html>
