--- a/JSindex.html
+++ b/JSindex.html
@@ -1,10 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="JSstyle.css">
+    <title>JS learning</title>
 </head>
-<body></body>
+
+<body>
+    <!--inline event handling
+    <button id="btn1">btn1</button>
+<div>This is div</div>
+
+<button id="mode">change mode</button>-->
+
+<div class="divbox">MouseOver</div>
+</body>
 <script src="first.js"></script>
+
 </html>
